--- a/beta/DeathMessages.html
+++ b/beta/DeathMessages.html
@@ -154,6 +154,7 @@ var KilledDMs = [
 	" was hit in the eye with an arrow by ",
 	" was hit on the forehead with a pebble by ",
 	" was hit on the head with a brick thrown by ",
+	" was hit on the head with a frying pan by ",
 	" was left on a far-out island by ",
 	" was murdered in his sleep by ",
 	" was pierced by a javelin thrown by ",
@@ -165,6 +166,7 @@ var KilledDMs = [
 	" was shot by a criminal gang under the command of ",
 	" was shot in a duel against ",
 	" was slain in battle by ",
+	" was sprayed in the face with muriatic acid by ",
 	" was stabbed in his sleep by ",
 	" was strangled by ",
 	" was tortured to death by "
@@ -294,7 +296,7 @@ var ScientificDMs = [
 <h1>RANDOM DEATH MESSAGE GENERATOR</h1>
 <h2>A very weird document by SciPred</h2>
 <h4 style="color:red">Do not take this seriously. This is only a joke. Only the homies will understand who the people are.</h4>
-<h4 style="color:blue">Version: 1.03</h4>
+<h4 style="color:blue">Version: 1.04</h4>
 <hr>
 <h3>Choose your type:</h3>
 <br>
@@ -375,7 +377,7 @@ function generateMessage() {
 
 <hr>
 
-<h2>History</h2>
+<h2 style="color:gray;">History</h2>
 <p id="historycontainer"></p>
 
 </body>
