--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@ section {
 <h4>MAJOR PROJECTS</h4>
 <ul>
 	<li><a href="./alpha/directions.html">Directions</a></li>
+	<li><a href="./theProgressPage/">Progress Page</a></li>
 	<li><a href="./beta/DeathMessages.html">Random Death Message Generator</a></li>
 </ul>
 
