--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@ section {
 <h2>A Document for Exploring All of his Works</h2>
 <h3>Includes Everything Alpha, Beta, and Experimental.</h3>
 <h3 style="color:red">PLEASE NOTE: The guy is still working hard on farming Minecraft Skywars Coins, so updates may be delayed.</h3>
-<h3 style="color:blue">Also, some documents will not work properly on mobile devices because the developer is too lazy to adjust the CSS and JS, especially when it comes to the PC Projects.</h3>
+<h3 style="color:blue">Also, some documents will not work properly on mobile devices because the developer is too lazy to adjust the CSS and JS, so he disabled PC Projects on mobile because he has zero consideration for them. (Just kidding: some processes require functions that can only be done in PC.)</h3>
+<h3 style="color:green">Special projects are marked in green text.</h3>
 </section>
 
 <aside id="lists">
@@ -115,12 +116,13 @@ section {
 <ul id="pcpros">
 	<li><a href="./alpha/achv2.html">Achievofile</a></li>
 	<li><a href="./beta/SCPDCALC.html">SciPred's Calculator</a></li>
+	<li><a href="./stringtool/" style="color:#00C600">Stringtool</a></li>
 </ul>
 
 <h4>MAJOR PROJECTS</h4>
 <ul>
 	<li><a href="./alpha/directions.html">Directions</a></li>
-	<li><a href="./theProgressPage/">Progress Page</a></li>
+	<li><a href="./theProgressPage/" style="color:#00C600">Progress Page</a></li>
 	<li><a href="./beta/DeathMessages.html">Random Death Message Generator</a></li>
 </ul>
 
@@ -156,6 +158,7 @@ function openNav() {
 		document.getElementsByTagName('h3')[0].style.opacity = 1;
 		document.getElementsByTagName('h3')[1].style.opacity = 1;
 		document.getElementsByTagName('h3')[2].style.opacity = 1;
+		document.getElementsByTagName('h3')[3].style.opacity = 1;
 		document.getElementById('lists').style.opacity = 1;
 	}, 600);
 }
@@ -187,7 +190,7 @@ function choose(arr) {return arr[Math.floor(Math.random()*arr.length)];}
 
 if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
 	document.getElementById("pcpros").innerHTML = `
-		<li><p>Sorry, you're on mobile. I'm doing my best to prevent errors happening on your device.</p></li>
+		<li><p style="color:red">Sorry, you're on mobile. I'm doing my best to prevent errors happening on your device. (If you really want to see the documents that badly, then you could... if you were smart enough.)</p></li>
 	`;
 }
 </script>
