--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="description" content="SciPred's Domain. Thanks people">
 <meta name="author" content="SciPred">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" type="image/png" href="resources/logo.png" />
+<link rel="icon" type="image/png" href="resourcesindex/logo.png" />
 <style>
 html, body {
 	width: 100%;
@@ -114,23 +114,23 @@ section {
 <aside id="lists">
 <h4>PC PROJECTS</h4>
 <ul id="pcpros">
-	<li><a href="./alpha/achv2.html">Achievofile</a></li>
-	<li><a href="./beta/SCPDCALC.html">SciPred's Calculator</a></li>
+	<li><a href="./achv2/">Achievofile</a></li>
+	<li><a href="./SCPDCALC/">SciPred's Calculator</a></li>
 	<li><a href="./stringtool/" style="color:#00C600">Stringtool</a></li>
 </ul>
 
 <h4>MAJOR PROJECTS</h4>
 <ul>
-	<li><a href="./alpha/directions.html">Directions</a></li>
 	<li><a href="./theProgressPage/" style="color:#00C600">Progress Page</a></li>
-	<li><a href="./beta/DeathMessages.html">Random Death Message Generator</a></li>
+	<li><a href="./DeathMessages/">Random Death Message Generator</a></li>
 </ul>
 
 <h4>EXPERIMENTAL</h4>
 <ul>
-	<li><a href="./experimental/RandomBinGenerator.html">Random Binary Generator</a></li>
-	<li><a href="./experimental/sociablePairFinder.html">Sociable Pair Finder</a></li>
-	<li><a href="./experimental/terminal.html">Terminal</a></li>
+	<li><a href="./experimental/directions/">Directions</a></li>
+	<li><a href="./experimental/RandomBinGen/">Random Binary Generator</a></li>
+	<li><a href="./experimental/sociablePairFinder/">Sociable Pair Finder</a></li>
+	<li><a href="./experimental/terminal/">Terminal</a></li>
 </ul>
 </aside>
 
