actual commit yay
wow so amazing

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 <meta name="author" content="SciPred">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" type="image/png" href="resourcesindex/logo.png" />
+<!--
+	Copyright SciPred 2020 onwards
+	You can edit this to your extent, but do not re-host it nor present it as your own.
+	(Co-author claims may be an exception)
+-->
 <style>
 html, body {
 	width: 100%;
@@ -105,16 +110,14 @@ section {
 <section>
 <h1>Welcome To SciPred's Domain</h1>
 <h2>A Document for Exploring All of his Works</h2>
-<h3>Includes Everything Alpha, Beta, and Experimental.</h3>
-<h3 style="color:red">PLEASE NOTE: The guy is still working hard on farming Minecraft Skywars Coins, so updates may be delayed.</h3>
-<h3 style="color:blue">Also, some documents will not work properly on mobile devices because the developer is too lazy to adjust the CSS and JS, so he disabled PC Projects on mobile because he has zero consideration for them. (Just kidding: some processes require functions that can only be done in PC.)</h3>
+<h3>Includes nearly everything he's been working on.</h3>
+<h3 style="color:blue">Explore all you need to... if you have the time.</h3>
 <h3 style="color:green">Special projects are marked in green text.</h3>
 </section>
 
 <aside id="lists">
 <h4>PC PROJECTS</h4>
 <ul id="pcpros">
-	<li><a href="./achv2/">Achievofile</a></li>
 	<li><a href="./SCPDCALC/">SciPred's Calculator</a></li>
 	<li><a href="./stringtool/" style="color:#00C600">Stringtool</a></li>
 </ul>
@@ -127,6 +130,7 @@ section {
 
 <h4>EXPERIMENTAL</h4>
 <ul>
+	<li><a href="./experimental/achv2/">Achievofile</a></li>
 	<li><a href="./experimental/directions/">Directions</a></li>
 	<li><a href="./experimental/RandomBinGen/">Random Binary Generator</a></li>
 	<li><a href="./experimental/sociablePairFinder/">Sociable Pair Finder</a></li>
