--- a/stringtool/index.html
+++ b/stringtool/index.html
@@ -139,7 +139,7 @@ button {
 	<span id="trimString" onclick="trimString()">&#9988;</span>
 	<span id="reverseString" onclick="reverseString()">&#128472;</span>
 	<span id="aboutStringtool" onclick="aboutStringtool()">?</span>
-	<span id="openNewTab" onclick="window.location.open('https://scipreda.github.io/stringtool/')">&#10010;</span>
+	<span id="openNewTab" onclick="window.open('https://scipreda.github.io/stringtool/')">&#10010;</span>
 	<span id="reloadPage" onclick="window.location.reload()">&#8634;</span>
 </header>
 
