--- a/stringtool/index.html
+++ b/stringtool/index.html
@@ -138,6 +138,7 @@ button {
 	<span id="moveLastCharString" onclick="moveLastCharString()">&#8594;</span>
 	<span id="trimString" onclick="trimString()">&#9988;</span>
 	<span id="reverseString" onclick="reverseString()">&#128472;</span>
+	<span id="downloadTxt" onclick="downloadTxt()">&#11015;</span>
 	<span id="aboutStringtool" onclick="aboutStringtool()">?</span>
 	<span id="openNewTab" onclick="window.open('https://scipreda.github.io/stringtool/')">&#10010;</span>
 	<span id="reloadPage" onclick="window.location.reload()">&#8634;</span>
@@ -174,7 +175,7 @@ button {
 	<i style="position:fixed;top:10px;left:10px" onclick="aboutStringtool()">&times;</i>
 	<h1>STRINGTOOL</h1>
 	<h2 style="color:#00E600">A work in progress by SciPred</h2>
-	<h3>Version 1.1</h3>
+	<h3>Version 1.11</h3>
 	<p>Stringtool is an experimental tool simply used to edit a piece of string.</p>
 	<p>The string is displayed in the middle of the page, in a big font size (6em). Click on it to edit it.</p>
 	<p>You can edit the string as many times as you want.</p>
@@ -190,6 +191,7 @@ button {
 	<h3 style="color:#ddd">NEW ON THIS VERSION:</h3>
 	<p>- If you have the Grammarly extension installed, it can automatically check your grammar for you.</p>
 	<p>- Added option to open Stringtool in a new page</p>
+	<p>- Added option to download string in a text file</p>
 </div>
 <script>
 function gID(id) {return document.getElementById(id)}
@@ -222,6 +224,7 @@ lblset(gID("moveFirstCharString"), "Push First Character to End");
 lblset(gID("moveLastCharString"), "Push Last Character to Start");
 lblset(gID("trimString"), "Remove Whitespaces on the Sides");
 lblset(gID("reverseString"), "Reverse String");
+lblset(gID("downloadTxt"), "Download Text File");
 lblset(gID("aboutStringtool"), "About Stringtool");
 lblset(gID("openNewTab"), "Open In New Page");
 lblset(gID("reloadPage"), "Reload Page");
@@ -380,6 +383,18 @@ function replaceCharString() {
 		return 0;
 	}
 	gID("stringHolder").innerText = s.replace(a, b);
+}
+function downloadTxt() {
+	function download(filename, text) {
+		var element = document.createElement('a');
+		element.setAttribute('href', 'data:text/plain;charset=utf-8,' + encodeURIComponent(text));
+		element.setAttribute('download', filename);
+		element.style.display = 'none';
+		document.body.appendChild(element);
+		element.click();
+		document.body.removeChild(element);
+	}
+	download("stringtoolstring.txt", gID("stringHolder").innerText);
 }
 
 var errint = null;
