--- a/stringtool/index.html
+++ b/stringtool/index.html
@@ -189,7 +189,7 @@ button {
 	<p style="color:#ccc">It's a bit pointless - but it works.</p>
 	<p style="color:blue;font-weight:bold;">If you have any suggestions for me, contact or email me at mrsimple.mcpe@gmail.com if you don't ever bother.</p>
 	<h3 style="color:#ddd">NEW ON THIS VERSION:</h3>
-	<p>- If you have the Grammarly extension installed, it can automatically check your grammar for you.</p>
+	<p>- If you have the <bold onclick="window.open('https://grammarly.com')" style="color:#4affd5">Grammarly</bold> extension installed, it can automatically check your grammar for you.</p>
 	<p>- Added option to open Stringtool in a new page</p>
 	<p>- Added option to download string in a text file</p>
 </div>
