--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="description" content="SciPred's Domain. Thanks people">
 <meta name="author" content="SciPred">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" href="favicon.ico" />
+<link rel="shortcut icon" href="favicon.ico">
 <!--
 	Copyright SciPred 2020 onwards
 	You can edit this to your extent, but do not re-host it nor present it as your own.
